# LittleHelper

./: .gitignore  Project_Structure.txt  pyproject.toml
src/littlehelper/: cli.py  config.py
src/littlehelper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/littlehelper/gui/: app.py  main_window.py
src/littlehelper/llm/: ollama_client.py
src/littlehelper/system/: ollama_control.py
src/littlehelper/workers/: inference_worker.py
