[project]
name = "littlehelper"
version = "0.1.0"
description = "Local-first personal assistant"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]

[project.scripts]
littlehelper = "littlehelper.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}